--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "bitcoin-weallet-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "fingerprintjs2": "^2.0.5",
+    "sockjs-client": "^1.3.0",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
