--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "redux": "^4.0.1",
     "fingerprintjs2": "^2.0.5",
     "sockjs-client": "^1.3.0",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "moment": "^2.24.0",
+    "qrcode-generator": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
